--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 *.user
 *.sln.docstates
 
+# SQL
+*.mdf
+*.ldf
+
 # Build results
 
 [Dd]ebug/
@@ -97,7 +101,7 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
 
 # Windows Azure Build Output
 csx
