--- a/MovieSPA/packages.config
+++ b/MovieSPA/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-rc1" targetFramework="net45" />
+  <package id="jQuery" version="2.0.3" targetFramework="net45" />
+  <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-rtm-130908" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-rtm-130908" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-rtm-130908" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
 </packages>
